# ya-drone-swarm

./: .gitignore  README.md  pyproject.toml
tests/: test_ya_drone_swarm.py
ya_drone_swarm/: __init__.py  __main__.py  cli.py
ya_drone_swarm/docker/: Dockerfile  ya-install.sh
