[tool.poetry]
name = "ya-drone-swarm"
version = "0.1.0"
description = ""
authors = ["mfranciszkiewicz <marek@golem.network>"]

[tool.poetry.scripts]
drone-swarm = "ya_drone_swarm:main"

[tool.poetry.dependencies]
aiodocker = "0.21.0"
#alive-progress = "^1.5.1"
colorama = "0.4.4"
coloredlogs = "15.0.1"
docker-compose = "^1.29"
docker = "^5.0"
python = "^3.6.2"
PyYAML = "5.4.1"

[tool.poetry.dev-dependencies]
black = "21.7b0"
flake8-docstrings = "1.6.0"
poethepoet = "^0.10"
pytest = "^6.2"

[tool.poe.tasks]
fmt = "black ."

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
